# magpie

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main_sqllineage.yml
magpie/: main.py  models.py  settings.py
magpie/routers/: sqllineage.py
src/magpie/: main.py
