[project]
name = "magpie"
version = "1.0.0"
description = "API server for reata.github.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.1,<1.0.0",
    "httpx>=0.23.0,<1.0.0",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "python-dotenv>=0.20.0,<1.0.0",
    "sqllineage>=1.5.4,<2.0.0",
    "uvicorn>=0.15.0,<1.0.0",
]

[project.scripts]
dev = "magpie.main:dev"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3,<3.0.0",
    "ruff>=0.5.0",
    "pytest>=8.0",
]

[tool.uv]
add-bounds = "major"

[tool.ruff]
target-version = "py310"
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["magpie"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
